Bug 120511 - FILEOPEN DOCX Page break with page format change (from portrait to landscape orientation) not interpreted in a document containing a text frame and a table
Summary: FILEOPEN DOCX Page break with page format change (from portrait to landscape ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:6.3.0 target:6.2.1
Keywords: filter:docx
: 78671 (view as bug list)
Depends on:
Blocks: DOC-Page
  Show dependency treegraph
 
Reported: 2018-10-11 12:27 UTC by NISZ LibreOffice Team
Modified: 2019-10-08 12:41 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
A minimal version of the document. (28.63 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2018-10-11 12:28 UTC, NISZ LibreOffice Team
Details
A long version of the document with 4 pages of lorem ipsum to demonstrate, that the text frame doesn't have to be on the same page as the page break. (30.93 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2018-10-11 12:28 UTC, NISZ LibreOffice Team
Details
A screenshot showcasing the issue. (80.76 KB, image/png)
2018-10-11 12:29 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2018-10-11 12:27:52 UTC
Description:
This short DOCX document contains text frame a page break with format change (from portrait to landscape orientation) and a simple table on the top of the next page. The page break isn't interpreted when the document is opened in LibreOffice Writer. However, if I remove either the text frame or the table in Microsoft Word, save the document and reopen it with Writer, the page break appears fine and the orientation of the second page is landscape, as it supposed to be.

The text frame doesn't have to be near the page break: I created a second version of the file, where the text frame is on the first page, then it continues with 4 pages of lorem ipsum before the page break, and the issue is still present: the page break doesn't appear.

Steps to Reproduce:
1.Steps to reproduce:

    1. Open the file Frame-PageBreak-Table-minimal.docx in LibreOffice Writer.
2.
3.

Actual Results:
The document has only one, portrait oriented page.

Expected Results:
The document should be two pages long, the first page should be in portrait, the second page should be in landscape format.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 NISZ LibreOffice Team 2018-10-11 12:28:15 UTC
Created attachment 145598 [details]
A minimal version of the document.
Comment 2 NISZ LibreOffice Team 2018-10-11 12:28:48 UTC
Created attachment 145599 [details]
A long version of the document with 4 pages of lorem ipsum to demonstrate, that the text frame doesn't have to be on the same page as the page break.
Comment 3 NISZ LibreOffice Team 2018-10-11 12:29:04 UTC
Created attachment 145600 [details]
A screenshot showcasing the issue.
Comment 4 Xisco Faulí 2018-11-12 13:06:07 UTC
Reproduced in

Version: 6.2.0.0.alpha1+
Build ID: 3a99ae072ac170ebed8d1f5bf65913d3412fab67
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

Version: 5.2.0.0.alpha0+
Build ID: 3ca42d8d51174010d5e8a32b96e9b4c0b3730a53
Threads 4; Ver: 4.10; Render: default; 

Version: 4.3.0.0.alpha1+
Build ID: c15927f20d4727c3b8de68497b6949e72f9e6e9e

Version 4.1.0.0.alpha0+ (Build ID: efca6f15609322f62a35619619a6d5fe5c9bd5a)

LibreOffice 3.3.0 
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4
Comment 5 Xisco Faulí 2018-11-12 13:06:39 UTC
@Justin, I thought you could be interested in this issue...
Comment 6 Justin L 2018-12-29 15:57:58 UTC
proposed fix at https://gerrit.libreoffice.org/65720½U
Comment 7 Commit Notification 2018-12-29 18:26:26 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/6aeba04b31cc33135f84bd7ea38a04ee9faa14ec%5E%21

tdf#120511 writerfilter: track inserted frame per section

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2019-01-28 14:04:26 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/b761504aa81ac8e2f61ba87899a965de19dc35cc%5E%21

tdf#120511 writerfilter: track inserted frame per section

It will be available in 6.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 NISZ LibreOffice Team 2019-10-08 12:41:41 UTC
*** Bug 78671 has been marked as a duplicate of this bug. ***