tdf#120511 writerfilter: track inserted frame per section

The logic using IsTextFrameInserted is worried about whether
a frame has been inserted before a table *in this section*,
so track frame's existence per section, not per document.

Change-Id: I8aa8a695b89727832e65535adae3fc3c94f95be5
Reviewed-on: https://gerrit.libreoffice.org/65720
Tested-by: Jenkins
Reviewed-by: Justin Luth <justin_luth@sil.org>
(cherry picked from commit 6aeba04b31cc33135f84bd7ea38a04ee9faa14ec)